
==== (ongoing) ===


==== 0.0.2 (ongoing) ===

- BEM style css classes for all plugins


==== 0.0.1 (2017-04-03) ===

- initial 0.0.1, no pypi
